fix: webhook props and overflowing modal tables

--- a/public/pages/Administration/components/webhook/WebhookProperties.scss
+++ b/public/pages/Administration/components/webhook/WebhookProperties.scss
@@ -3,28 +3,50 @@
 .c-webhook-properties {
   border-spacing: 0;
 
-  th {
-    padding: sizing(3);
-  }
+  &__header {
+    font-weight: get("font.weight.semibold");
+    width: 50%;
+    padding: 0 spacing(1);
 
-  td {
-    border-top: 1px solid get("colors.gray.100");
-    padding: sizing(2);
+    @include media("sm") {
+      width: 100%;
+
+      &:last-child {
+        font-weight: get("font.weight.medium");
+        padding-top: spacing(2);
+      }
+    }
   }
 
   &__prop {
     font-family: get("font.family.code");
     font-size: get("font.size.sm");
+    width: 50%;
+    padding: 0 spacing(1);
+
+    @include media("sm") {
+      width: 100%;
+      font-size: get("font.size.base");
+      padding-bottom: spacing(2);
+    }
   }
 
   &__val {
     font-size: get("font.size.sm");
+    width: 50%;
+    padding: 0 spacing(1);
+
+    @include media("sm") {
+      width: 100%;
+    }
+
     @each $color in ("gray", "blue", "green", "red") {
       &--#{$color} {
         font-family: get("font.family.code");
         color: get("colors.#{$color}.600");
       }
     }
+
     &--italic {
       font-style: italic;
     }
